Changing template name

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
-	Theme Name: Genesis Sample
+	Theme Name: Camp Fluid
 	Description: This is the sample theme created for the Genesis Framework.
-	Author: StudioPress
-	Author URI: http://www.studiopress.com/
+	Author: Håkon Stillingen
+	Author URI: http://www.campfluid.no/
 	Version: 2.0.1
  
 	Tags: black, orange, white, one-column, two-columns, three-columns, fixed-width, custom-menu, full-width-template, sticky-post, theme-options, threaded-comments, translation-ready
